multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: abhishek-pod
spec:
  containers:
  - name: ghee
    image: abhishekjoshhi/ghee
    ports:
    - containerPort: 5656
  -name : vegetable
    image: abhishekjoshhi/veg2
    ports:
    - containerPort: 3000
