deployment.yaml
apiVersion : apps/v1
kind : Deployment
metadata:
  name : abhishek-deployment
  namespace: abhishek-namespace
  labels:
    first: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness
          image: abhishekjoshhi/fitness:v1.0.0
          ports:
            - containerPort: 5000
          envFrom:
            - configMapRef:
                name: abhishek-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: abhishek-service
  namespace: abhishek-namespace
spec:
  selector:
    app: fitness
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5000
  type: LoadBalancer
