http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: abhishek-http-route
  namespace: abhishek-namespace
spec:
  parentRefs:
    - name: abhishek-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/web
      filters::
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /web
      backendRefs:
        - name: abhishek-service
          port: 5005
